--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
           <div class="col-md-7">
             <h4 class="aboutMe">ስለ እኔ</h4>
-            <p>I'm Alemtetenie Abye from Dejen,Ethiopia.</p>
+            <p>I'm Alemtenie Abye from Dejen,Ethiopia.</p>
 
             <p>
               I'm very lovely, beautiful,cool, Wonderful, Magnificent,Clever and
