--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 </div>
                 <div class="squareContent">
                   <h2 class="">ደሳለኝ</h2>
-                  <h3>አሁን በፍቅሬ እየተጎዳ ያለ</h3>
+                  <h3>አሁን በፍቅሬ የተያዘ</h3>
                   <br />
                   <video width="240" height="230" controls>
                     <source src="img/lovejiff.mp4" type="video/mp4" />
