--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             ></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#skills">ቁንጂና</a>
+            <a class="nav-link" href="#skills">ቁንጅና</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#stats">የጋብቻ ሁኔታ</a>
@@ -112,7 +112,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <h2>ቁንጂና</h2>
+            <h2>ቁንጅና</h2>
             <p>As I write above, I'm beauty and very lovely.</p>
           </div>
 
@@ -122,7 +122,7 @@
                 <span class="percent">100</span>
                 <canvas height="152" width="152"></canvas>
               </span>
-              <h4>ቁንጂና</h4>
+              <h4>ቁንጅና</h4>
             </div>
 
             <div class="skill">
