--- a/index.html
+++ b/index.html
@@ -229,11 +229,14 @@
       </div>
     </div>
 
+    <br>
+    <h1>ደሳለኝ</h1>
+    <h2>I love you. I have no word to express my love</h2>
     <!-- Copyright -->
 
     <div class="copyrightSection">
       <div class="col-md-12 text-center">
-        <p>copyright &copy; 2022 መብቱ በህግ የተጠበቀ ነው | በደሳለኝ ተዘጋጀ</p>
+        <p>copyright &copy; ታህሳስ/25/2015 ዓ.ም, መብቱ በህግ የተጠበቀ ነው | በደሳለኝ ተዘጋጀ</p>
       </div>
     </div>
 
