--- a/index.html
+++ b/index.html
@@ -229,9 +229,13 @@
       </div>
     </div>
 
-    <br>
-    <h1>ደሳለኝ</h1>
-    <h2>I love you. I have no word to express my love</h2>
+    <br />
+    <h1
+      style="text-align: center; align-items: center; justify-content: center"
+    >
+      ደሳለኝ
+    </h1>
+    <h2>I love you. I have no word to express my love!!!</h2>
     <!-- Copyright -->
 
     <div class="copyrightSection">
