--- a/index.html
+++ b/index.html
@@ -235,7 +235,11 @@
     >
       ደሳለኝ
     </h1>
-    <h2>I love you. I have no word to express my love!!!</h2>
+    <h2
+      style="text-align: center; align-items: center; justify-content: center"
+    >
+      I love you. I have no word to express my love!!!
+    </h2>
     <!-- Copyright -->
 
     <div class="copyrightSection">
