--- a/index.html
+++ b/index.html
@@ -115,7 +115,15 @@
             <h2>ቁንጅና</h2>
             <p>As I write above, I'm beauty and very lovely.</p>
           </div>
-
+          <h2
+            style="
+              text-align: center;
+              align-items: center;
+              justify-content: center;
+            "
+          >
+            ወደ ቀኝ ስክሮል ያድርጉ(ለስልክ ተጠቃሚ ብቻ)
+          </h2>
           <div class="owl-carousel owl-theme">
             <div class="skill">
               <span class="chart" data-percent="100">
