--- a/index.html
+++ b/index.html
@@ -252,8 +252,12 @@
         <a href="mailTo:desalegn251@gmail.com" class="contactButton">አግኙኝ!</a>
       </div>
     </div>
-
     <br />
+    <div style="align-items: center; justify-content: center;background-image: linear-gradient(green, yellow, red);">
+      <img src="./img/gena.png" alt="" style="padding-left: 100px; align-items: center; justify-content: center">
+    
+    <br>
+    <hr>
     <h1
       style="text-align: center; align-items: center; justify-content: center"
     >
@@ -264,7 +268,11 @@
     >
       I love you. I have no word to express my love!!!
     </h2>
-    <!-- Copyright -->
+    <hr>
+    <br>
+<img src="./img/ring.png" alt=" ring" style="padding-left: 100px; align-items: center; justify-content: center">
+</div>    
+<!-- Copyright -->
 
     <div class="copyrightSection">
       <div class="col-md-12 text-center">
