--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
     <div id="slides">
       <div class="overlay"></div>
       <div class="slides-container">
-        <img src="img/" alt="This was my photo" />
         <img src="img/photo1.jpg" alt="This was my photo" />
+        <img src="img/photo0.jpg" alt="This was my photo" />
         <img src="img/photo11.jpg" alt="This was my photo" />
         <img src="img/photo12.jpg" alt="This was my photo" />
         <img src="img/photo2.jpg" alt="This was my photo" />
         <img src="img/photo3.jpg" alt="This was my photo" />
         <img src="img/photo4.jpg" alt="This was my photo" />
-        <!-- <img src="img/" alt="This was my photo" /> -->
         <img src="img/photo5.jpg" alt="This was my photo" />
       </div>
       <div class="titleMessage">
