chat history commit

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </div>
     </div>
     <!-- chat history -->
-    <div>
+    <div style="height: 100px;background: green;">
       <a href="./ChatExport//messages.html">Chat history</a>
     </div>
     <!-- Contact -->
