third chat history commit

--- a/index.html
+++ b/index.html
@@ -240,8 +240,17 @@
       </div>
     </div>
     <!-- chat history -->
-    <div style="height: 100px;background: green;">
-      <a href="./ChatExport//messages.html">Chat history</a>
+    <div style="height: 100px; background: orangered">
+      <a
+        href="./ChatExport//messages.html"
+        style="
+          font-size: 20px;
+          align-items: center;
+          justify-content: center;
+          justify-items: center;
+        "
+        >Chat</a
+      >
     </div>
     <!-- Contact -->
     <div id="contact" class="contactSection section">
