fourth chat history commit

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
           align-items: center;
           justify-content: center;
           justify-items: center;
+          text-align: center;
         "
         >Chat</a
       >
@@ -288,7 +289,7 @@
       <h2
         style="text-align: center; align-items: center; justify-content: center"
       >
-        I love you. I have no word to express my love!!!
+        My love is for ever. Heaven help me!!!
       </h2>
       <hr />
       <br />
