Letter A added commit in to the link

--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
     <!-- chat history -->
     <div style="height: 100px; background: orangered">
       <a
-        href="./ChatExport//messages.html"
+      <!-- remove A from the link to display -->
+        href="./AChatExport//messages.html" 
         style="
           font-size: 20px;
           align-items: center;
@@ -250,7 +251,13 @@
           justify-items: center;
           text-align: center;
         "
-        >Chat</a
+        >
+        <pre>
+          Chat
+
+          For seeing this content first remove the letter 'A' from the source code at the bigging.
+        </pre>
+          </a
       >
     </div>
     <!-- Contact -->
