Letter A added commit in to the link socond commit

--- a/index.html
+++ b/index.html
@@ -241,9 +241,7 @@
     </div>
     <!-- chat history -->
     <div style="height: 100px; background: orangered">
-      <a
-      <!-- remove A from the link to display -->
-        href="./AChatExport//messages.html" 
+      <a href="./AChatExport//messages.html" 
         style="
           font-size: 20px;
           align-items: center;
