--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         font-size: 40px;
         text-align: center;
       ">
-         ምርጥ አባባሎች
+           A L E M T E N I E አትርቅም።
         </p>
         <ul>
           <li>
@@ -311,7 +311,7 @@
         font-size: 40px;
         text-align: center;
       ">
-         ምርጥ አባባሎች 2
+         A L E M T E N I E ብትሆን ምንኛ በታደልኩ፡፡
         </p>
         <ul>
           <li>ካለ መናገር ደጅ አዝማችነት ይቀራል::</li>
