--- a/index.html
+++ b/index.html
@@ -351,6 +351,19 @@
       />
 
       <br />
+      <img
+      src="./img/love gift.jpg"
+      alt=""
+      style="
+        padding-left: 20px;
+        padding-right: 10px;
+        padding-top: 10px;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+      "
+    />
+<br>
       <hr />
       <h1
         style="text-align: center; align-items: center; justify-content: center"
@@ -360,7 +373,9 @@
       <h2
         style="text-align: center; align-items: center; justify-content: center"
       >
-        My love is for ever!!!
+        My love is for ever!!! <br>
+        
+Nothing truly ever made sense until you came into my life.
       </h2>
       <hr />
       <br />
